--- a/style.css
+++ b/style.css
@@ -32,11 +32,34 @@ a,
     max-width: 100%;
     height: auto;
 }
+body {
+  background-image: url(https://i.im.ge/2022/09/24/19jFUy.paypal.png);
+}
 /*--blog----*/
 
 .sec-title{
   position:relative;
   margin-bottom:70px;
+}
+
+.sec-title .title{
+  position: relative;
+  display: block;
+  font-size: 16px;
+  line-height: 1em;
+  color: #ff8a01;
+  font-weight: 500;
+  background: rgb(247,0,104);
+  background: -moz-linear-gradient(to left, rgba(247,0,104,1) 0%, rgba(68,16,102,1) 25%, rgba(247,0,104,1) 75%, rgba(68,16,102,1) 100%);
+  background: -webkit-linear-gradient(to left, rgba(247,0,104,1) 0%,rgba(68,16,102,1) 25%,rgba(247,0,104,1) 75%,rgba(68,16,102,1) 100%);
+  background: linear-gradient(to left, rgba(247,0,104) 0%,rgba(68,16,102,1) 25%,rgba(247,0,104,1) 75%,rgba(68,16,102,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#F70068', endColorstr='#441066',GradientType=1 );
+  color: transparent;
+  -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  margin-bottom: 15px;
 }
 
 .sec-title h2{
@@ -63,7 +86,7 @@ a,
 }
 .pricing-section {
     position: relative;
-    padding: 20px 0 10px;
+    padding: 20px 0 2px;
     overflow: hidden;
 }
 .pricing-section .outer-box{
@@ -89,13 +112,13 @@ a,
   padding: 0 0 30px;
   max-width: 370px;
   margin: 0 auto;
-  border-bottom: 20px solid #470000;
+  border-bottom: 20px solid #3f0000;
 }
 
 .pricing-block .icon-box{
   position: relative;
   padding: 50px 30px 0;
-  background-color: #5f0000;
+  background-color: #4d0000;
   text-align: center;
 }
 
@@ -127,10 +150,10 @@ a,
   height: 130px;
   width: 130px;
   line-height: 120px;
-  border: 5px solid #000000;
+  border: 5px solid #5a0000;
   border-radius: 50%;
   font-size: 50px;
-  color: #440000;
+  color: #580000;
   -webkit-transition:all 600ms ease;
   -ms-transition:all 600ms ease;
   -o-transition:all 600ms ease;
@@ -226,7 +249,7 @@ a,
   color: #ffffff;
   font-weight: 500;
   padding: 8px 30px;
-  background-color: #580000;
+  background-color: #4b0000;
   border-radius: 10px;
   border-top:2px solid transparent;
   border-bottom:2px solid transparent;
@@ -238,36 +261,36 @@ a,
 }
 
 .pricing-block .btn-box a:hover{
-  color: #000000;
+  color: #ffffff;
 }
 
 .pricing-block .inner-box:hover .btn-box a{
-  color:#001814;
+  color:#550101f6;
   background:none;
   border-radius:0px;
-  border-color:#3d0000;
+  border-color:#580000;
 }
 
 .pricing-block:nth-child(2) .icon-box i,
 .pricing-block:nth-child(2) .inner-box{
-  border-color: rgb(0, 1, 75);
+  border-color: #000a38;
 }
 
 .pricing-block:nth-child(2) .btn-box a,
 .pricing-block:nth-child(2) .icon-box{
-  background-color: #0c0036;
+  background-color: #040036;
 }
 
 .pricing-block:nth-child(2) .inner-box:hover .btn-box a{
-  color:#0d023d;
+  color:#010035;
   background:none;
   border-radius:0px;
-  border-color:#03023a;
+  border-color:#040127;
 }
 
 .pricing-block:nth-child(2) .icon-box i,
 .pricing-block:nth-child(2) .price{
-  color: #0c0044;
+  color: #001044;
 }
 
 .pricing-block:nth-child(3) .icon-box i,
