--- a/style.css
+++ b/style.css
@@ -16,11 +16,11 @@ a,
             -moz-transition-timing-function: ease-in-out;
             -webkit-transition-timing-function: ease-in-out;
             -o-transition-timing-function: ease-in-out;
-            transition-duration: .2s;
-            -ms-transition-duration: .2s;
-            -moz-transition-duration: .2s;
-            -webkit-transition-duration: .2s;
-            -o-transition-duration: .2s;
+            transition-duration: .7s;
+            -ms-transition-duration: .7s;
+            -moz-transition-duration: .7s;
+            -webkit-transition-duration: .7s;
+            -o-transition-duration: .7s;
         }
         
         ul {
@@ -33,7 +33,7 @@ a,
     height: auto;
 }
 body {
-  background-image: url(https://i.im.ge/2022/09/24/19jFUy.paypal.png);
+  background-image: url(https://i.im.ge/2022/12/11/d2PcFK.fg-9.png);
 }
 /*--blog----*/
 
@@ -120,6 +120,7 @@ body {
   padding: 50px 30px 0;
   background-color: #4d0000;
   text-align: center;
+  border-radius: 20px;
 }
 
 .pricing-block .icon-box:before{
@@ -133,6 +134,11 @@ body {
   content: "";
 }
 
+.hola {
+  font-family: 'Dosis', sans-serif;
+  font-size: 20px;
+  color: #000000;
+}
 
 .pricing-block .icon-box .icon-outer{
   position: relative;
@@ -205,6 +211,7 @@ body {
   padding: 5px 0;
   padding-left: 30px;
   border-bottom: 1px dashed #dddddd;
+  
 }
 .pricing-block .features li:before {
     position: absolute;
@@ -256,6 +263,7 @@ body {
   -webkit-transition: all 400ms ease;
   -moz-transition: all 400ms ease;
   -ms-transition: all 400ms ease;
+  border-radius: 40px;
   -o-transition: all 400ms ease;
   transition: all 300ms ease;
 }
@@ -267,8 +275,10 @@ body {
 .pricing-block .inner-box:hover .btn-box a{
   color:#550101f6;
   background:none;
+   border-radius: 40px;
   border-radius:0px;
   border-color:#580000;
+  
 }
 
 .pricing-block:nth-child(2) .icon-box i,
@@ -279,6 +289,7 @@ body {
 .pricing-block:nth-child(2) .btn-box a,
 .pricing-block:nth-child(2) .icon-box{
   background-color: #040036;
+  border-radius: 20px;
 }
 
 .pricing-block:nth-child(2) .inner-box:hover .btn-box a{
@@ -301,6 +312,7 @@ body {
 .pricing-block:nth-child(3) .btn-box a,
 .pricing-block:nth-child(3) .icon-box{
   background-color: #ffc20b;
+  border-radius: 20px;
 }
 
 .pricing-block:nth-child(3) .icon-box i,
